--- a/VisualTAF/VisualTAF/SikuliTestData.resx
+++ b/VisualTAF/VisualTAF/SikuliTestData.resx
@@ -117,6 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="DefaultWait" xml:space="preserve">
+    <value>10</value>
+    <comment>in seconds</comment>
+  </data>
   <data name="TestSite" xml:space="preserve">
     <value>https://roomstyler.com/3dplanner</value>
   </data>
